Betting form margin fix on mobile devices

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -376,6 +376,7 @@ a:hover.glyphicon {
 
 .form-group {
     padding: 4px;
+    margin-bottom: 0px;
 }
 
 
